# cmake-playervideo-qt

./: CMakeLists.txt
qml/: main.qml  main.qmlc
src/: CMakeLists.txt  main.cpp
